--- a/src/css/Filters.css
+++ b/src/css/Filters.css
@@ -101,7 +101,12 @@
 	color: var(--primarytextcolor);
 	border-radius: 0.625rem;
 	padding-left: 2.25rem;
+  font-size: 1rem;
+	height: auto;
   transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+#filterBar input::placeholder, #filterBar input::-ms-input-placeholder{
+	color: var(--secondarytextcolor) !important;
 }
 
 #filterBar #filters .clear {
