--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -49,6 +49,7 @@ $gridRowHeight: 4;
 	--labelcolor: var(--accentgrey);
 	--inputcolor: var(--lightgrey);
 	--altheadingcolor: var(--primarytextcolor);
+	overflow: hidden
 }
 
 .dark-theme {
@@ -301,6 +302,15 @@ body {
 }
 .text-link:hover > span.subheadingfont {
 	color: var(--secondarytextcolor) !important;
+}
+
+@media (max-width: 1630px) {
+	.titlefont {
+		@include Raleway(2, 7)
+	}
+	.subtitlefont {
+		@include Raleway(1.25, 4.25)
+	}
 }
 
 /*Mobile Styles*/
